--- a/loader.html
+++ b/loader.html
@@ -12,10 +12,10 @@
     />
 </head>
 <body>
-
-<div style="display:none;" id="myDiv" class="animate-bottom">
-  <h2>Tada!</h2>
+<script src="./js/renderer.js"></script>
+<div class = "app">
+  <h1>Hello world</h1>
+  <button class="button1">About</button>
 </div>
-<script src="./renderer.js"></script>
 </body>
 </html>
