--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="../css/style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
-<body>
-<script src="./js/renderer.js"></script>
+<body background="../photo/1.jpg">
+<script src="../js/renderer.js"></script>
 <div class = "app">
     <h1>Titleeeeeeeeeeeee</h1>
 </div>
