--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
-<body background="../photo/1.jpg">
+<body>
 <script src="../js/renderer.js"></script>
 <div class = "app">
     <h1>Titleeeeeeeeeeeee</h1>
