--- a/html/load_file.html
+++ b/html/load_file.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-<a href = "index.html"><img src="../photo/back.png" width = 60 height = 60 ></a>
     <div class ="app">
-        <h1>Load file</h1>
+        <a href = "index.html" title = "Назад"><img src="../photo/back.png" width = 60 height = 60 style="margin-left: 15px; margin-top: 5px"></a>
+        <h2>Load file</h2>
     </div>
 </body>
 </html>
