started to do load_files

--- a/html/load_file.html
+++ b/html/load_file.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style_load.css">
+    <script src="./js/load_images.js"></script>
 </head>
 <body>
 <a href = "index.html"><img src="../photo/back.png" width = 60 height = 60 ></a>
     <div class ="app">
         <h1>Load file</h1>
     </div>
+<label for="ctrl">насРАНО</label>
+<input type="file" id="ctrl" webkitdirectory directory multiple/>
+<br>
+<label for="avatar">высРАНО</label>
+<input type="file" id="avatar" webkitdirectory directory multiple>
+<button id="submit">НАСрать</button>
 </body>
 </html>
