load_images.js + get path of input

--- a/html/load_file.html
+++ b/html/load_file.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <link rel="stylesheet" href="../css/style_load.css">
-    <script src="./js/load_images.js"></script>
 </head>
 <body>
     <div class ="app">
@@ -12,8 +11,9 @@
 <label for="ctrl">насРАНО</label>
 <input type="file" id="ctrl" webkitdirectory directory multiple/>
 <br>
-<label for="avatar">высРАНО</label>
-<input type="file" id="avatar" webkitdirectory directory multiple>
-<button id="submit">НАСрать</button>
+<button id="submit" name="submit_button">НАСрать</button>
+<br>
+<div id="result">результат</div>
+<script src="../js/load_images.js"></script>
 </body>
 </html>
