--- a/html/index.html
+++ b/html/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="../css/style.css">
+<link rel="stylesheet" href="../css/preloader.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 </head>
@@ -10,8 +11,11 @@
 <div class = "app">
     <h1>Titleeeeeeeeeeeee</h1>
 </div>
+<div id="page-preloader" class="preloader">
+    <div class="loader"></div>
+</div>
 <a class="btn" href="load_file.html">Start</a>
 <a class="btn2" href="about.html">О проекте</a>
-
+<script src="../js/preloader.js"></script>
 </body>
 </html>
