--- a/html/load_file.html
+++ b/html/load_file.html
@@ -8,10 +8,10 @@
         <a href = "index.html" title = "Назад"><img src="../photo/back.png" width = 60 height = 60 style="margin-left: 15px; margin-top: 5px"></a>
         <h2>Load file</h2>
     </div>
-<label for="ctrl">насРАНО</label>
+<label for="ctrl">Выберите папку:</label>
 <input type="file" id="ctrl" webkitdirectory directory multiple/>
 <br>
-<button id="submit" name="submit_button">НАСрать</button>
+<button id="submit" name="submit_button">Запуск анализа</button>
 <br>
 <div id="result">результат</div>
 <script src="../js/load_images.js"></script>
