--- a/html/index.html
+++ b/html/index.html
@@ -8,9 +8,9 @@
 <body>
 <script src="../js/renderer.js"></script>
 <div class = "app">
-    <h1>Titleeeeeeeeeeeee</h1>
+    <h1>Дима ЛЕГЕНДА</h1>
 </div>
-<a class="btn" href="load_file.html">Start</a>
+<a class="btn" href="load_file.html">Начать</a>
 <a class="btn2" href="about.html">О проекте</a>
 </body>
 </html>
