--- a/html/load_file.html
+++ b/html/load_file.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../css/style_load.css">
+<link rel="stylesheet" href="../css/style_load.css">
 </head>
 <body>
+<a href = "index.html" title = "Назад"><img src="../photo/back.png" width = 60 height = 60 style="margin-left: 15px; margin-top: 5px"></a>
+<h1><font size = 70px>Load file</h1>
     <div class ="app">
-        <a href = "index.html" title = "Назад"><img src="../photo/back.png" width = 60 height = 60 style="margin-left: 15px; margin-top: 5px"></a>
-        <h2>Load file</h2>
+        <label for="ctrl">Выберите папку:</label>
+        <input type="file" id="ctrl" webkitdirectory directory multiple/>
+        <br>
+        <button id="submit" name="submit_button" >Запуск анализа</button>
+        <br>
+        <div id="result">результат</div>
     </div>
-<label for="ctrl">Выберите папку:</label>
-<input type="file" id="ctrl" webkitdirectory directory multiple/>
-<br>
-<button id="submit" name="submit_button">Запуск анализа</button>
-<br>
-<div id="result">результат</div>
 <script src="../js/load_images.js"></script>
 </body>
 </html>
