--- a/html/about.html
+++ b/html/about.html
@@ -6,7 +6,7 @@
 <body>
 <div class ="app">
     <a href = "index.html" title = "Назад"><img src="../photo/back.png" width = 60 height = 60 style="margin-left: 15px; margin-top: 5px"></a>
-    <h2>About</h2>
+    <h2>О проекте</h2>
 </div>
 </body>
 </html>
