--- a/html/load_file.html
+++ b/html/load_file.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <a href = "index.html" title = "Назад"><img src="../photo/back.png" width = 60 height = 60 style="margin-left: 15px; margin-top: 5px"></a>
-<h1>Load file</h1>
+<h1>Загрузите папку</h1>
     <div class ="app">
         <label for="ctrl">Выберите папку:  </label>
         <input type="file" id="ctrl" webkitdirectory directory multiple/>
