--- a/html/about.html
+++ b/html/about.html
@@ -7,6 +7,11 @@
 <div class ="app">
     <a href = "index.html" title = "Назад"><img src="../photo/back.png" width = 60 height = 60 style="margin-left: 15px; margin-top: 5px"></a>
     <h2>О проекте</h2>
+    <h3 style = "text-align: center">Разработанное приложение автоматически идентифицирует белых медведей на массиве аэрофотосъемки с целью отслеживания вида в дикой природе.
+        Детекция осуществляется с помощью современных открытых технологий машинного обучения в области компьютерного зрения (OpenCV, YOLOv7).
+        Учёным-полярникам нужно всего лишь запустить приложение на своем компьютере, выбрать папку с фотографиями и начать анализ. Искусственный интеллект выдаст отчёт, на каких участках фотографий обнаружены белые медведи.
+        <a href = "https://github.com/nizamovtimur/mishedron">Ссылка на GitHub</a>
+    </h3>
 </div>
 </body>
 </html>
