--- a/html/load_file.html
+++ b/html/load_file.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="../css/style_load.css">
 </head>
 <body>
-<a href = "index.html" title = "Назад"><img src="../photo/back.png" width = 60 height = 60 style="margin-left: 15px; margin-top: 5px"></a>
+<a href = "index.html" title = "Назад"><img src="../photo/back1.png" width = 20 height = 20 style="margin-left: 1%; margin-top: 1%"></a>
 <h1>Загрузите папку</h1>
     <div class ="app">
         <label for="ctrl">Выберите папку:  </label>
