Added bootstrap and jquery manually

--- a/html/load_file.html
+++ b/html/load_file.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <link rel="stylesheet" href="../css/style_load.css">
+    <link rel="stylesheet" href="../bootstrap-5.2.1-dist/css/bootstrap.min.css" />
+    <script type="text/javascript" src="../jquery/jquery-3.6.1.js"></script>
+    <script src="../bootstrap-5.2.1-dist/js/bootstrap.min.js"></script>
 </head>
 <body>
 <a href = "index.html" title = "Назад"><img src="../photo/back1.png" width = 20 height = 20 style="margin-left: 1%; margin-top: 1%"></a>
