--- a/html/about.html
+++ b/html/about.html
@@ -2,16 +2,40 @@
 <html>
 <head>
 <link rel="stylesheet" href="../css/style.css">
+    <style>
+        div .about_text {
+            position: relative;
+            background-color: #ffffff;
+            color: #000000;
+            margin: 120px auto;
+            padding: 20px 10px 20px;
+            width: 80%;
+        }
+        div .about_text p {
+            margin: 20px 0;
+        }
+    </style>
 </head>
 <body>
 <div class ="app">
     <a href = "index.html" title = "Назад"><img src="../photo/back1.png" width = 20 height = 20 style="margin-left: 1%  ; margin-top: 1%"></a>
     <h2>О проекте</h2>
-    <h3 style = "text-align: center">Разработанное приложение автоматически идентифицирует белых медведей на массиве аэрофотосъемки с целью отслеживания вида в дикой природе.
-        Детекция осуществляется с помощью современных открытых технологий машинного обучения в области компьютерного зрения (OpenCV, YOLOv7).
-        Учёным-полярникам нужно всего лишь запустить приложение на своем компьютере, выбрать папку с фотографиями и начать анализ. Искусственный интеллект выдаст отчёт, на каких участках фотографий обнаружены белые медведи.
-        <a href = "https://github.com/nizamovtimur/mishedron">Ссылка на GitHub</a>
-    </h3>
+    <div class="about_text">
+        <p>Приложение автоматически идентифицирует белых медведей на массиве
+            аэрофотосъемки с целью отслеживания вида в дикой природе.
+            Детекция осуществляется с помощью современных открытых технологий машинного обучения
+            в области компьютерного зрения (OpenCV, YOLOv7).</p>
+        <p>Для работы необходимо нажать кнопку «Начать», выбрать папку с фотографиями, запустить
+            анализ и дождаться выполнения (это может занять некоторое время).
+            Искусственный интеллект выдаст отчёт,
+            на каких участках фотографий обнаружены белые медведи.</p>
+        <p>
+            <i>
+                Проект выполнен на окружном хакатоне «Цифровой прорыв: Сезон Искусственный интеллект» в Центральном федеральном округе (г. Москва) с 23 по 25 сентября 2022 года в рамках кейса «Найти белого медведя с помощью ИИ» от Минприроды России.
+            </i>
+        </p>
+    </div>
+
 </div>
 </body>
 </html>
