--- a/html/load_file.html
+++ b/html/load_file.html
@@ -6,10 +6,8 @@
     <script type="text/javascript" src="../jquery/jquery-3.6.1.js"></script>
     <script src="../bootstrap-5.2.1-dist/js/bootstrap.min.js"></script>
 </head>
-<body>
-
-<div id="left">
-    <a href = "index.html" title = "Назад"><img src="../photo/back1.png" width = 20 height = 20 style="margin-left: 1%; margin-top: 1%"></a>
+<body style="background: #bfdde7">
+    <a href = "index.html" title = "Назад"><img src="../photo/back1.png" width = 25 height = 25 style="margin-left: 1%; margin-top: 1%"></a>
     <h1>Загрузите папку</h1>
         <div class ="app">
             <label for="ctrl" >Выберите папку: </label>
@@ -24,10 +22,6 @@
     <div class = "app2">
         <div id="result" style="padding-left: 15%">результат</div>
     </div>
-</div>
-<div id="right">
-
-</div>
 <script src="../js/load_images.js"></script>
 </body>
 </html>
