--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 <body>
 <script src="../js/renderer.js"></script>
 <div class = "app">
-    <h1>Распознавание медведей<hr></h1>
+    <h1>Детекция белых медведей</h1>
 </div>
 <a class="btn" href="load_file.html">Начать</a>
 <a class="btn2" href="about.html">О проекте</a>
