--- a/html/load_file.html
+++ b/html/load_file.html
@@ -7,12 +7,9 @@
     <script src="../bootstrap-5.2.1-dist/js/bootstrap.min.js"></script>
 </head>
 <body style="background: #bfdde7">
-    <a href = "index.html" title = "Назад"><img src="../photo/back1.png" width = 25 height = 25 style="margin-left: 1%; margin-top: 1%"></a>
-    <h1>Загрузите папку</h1>
-        <div class ="app">
-            <label for="ctrl" >Выберите папку: </label>
-            <input type="file" id="ctrl" webkitdirectory directory multiple/>
-        </div>
+    <a href = "index.html" title = "Назад"><img src="../photo/back1.png" width = 30 height = 30 style="margin-left: 1%; margin-top: 1%"></a>
+    <h1>Выберите папку с фотографиями</h1>
+    <input type="file" id="ctrl" webkitdirectory directory multiple/>
     <br>
         <div class = "app1">
             <button id="submit" name="submit_button" class = "btn-load">Запуск анализа</button>
