--- a/html/load_file.html
+++ b/html/load_file.html
@@ -26,7 +26,7 @@
 <!--                <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">Settings</a>-->
             </div>
         </div>
-        <div class="col-8 tabs">
+        <div class="col-8 tabs" id="tabs">
             <div class="tab-content" id="nav-tabContent">
 <!--                <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">...</div>-->
 <!--                <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...</div>-->
