added preloader when loading results

--- a/html/load_file.html
+++ b/html/load_file.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="../css/style_load.css">
+    <link rel="stylesheet" href="../css/style_load.css">
+    <link rel="stylesheet" href="../css/preloader.css">
     <link rel="stylesheet" href="../bootstrap-5.2.1-dist/css/bootstrap.min.css" />
     <script type="text/javascript" src="../jquery/jquery-3.6.1.js"></script>
     <script src="../bootstrap-5.2.1-dist/js/bootstrap.min.js"></script>
@@ -17,26 +18,29 @@
             <button id="submit" name="submit_button" class = "btn-load">Запуск анализа</button>
             <br>
         </div>
-    <div class="row" id="listGroup">
-        <div class="col-4">
-            <div class="list-group" id="list-tab" role="tablist">
-<!--                <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">Home</a>-->
-<!--                <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">Profile</a>-->
-<!--                <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">Messages</a>-->
-<!--                <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">Settings</a>-->
+        <div id="page-preloader" class="preloader">
+            <div class="loader"></div>
+        </div>
+        <div class="row" id="listGroup">
+            <div class="col-4">
+                <div class="list-group" id="list-tab" role="tablist">
+    <!--                <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">Home</a>-->
+    <!--                <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">Profile</a>-->
+    <!--                <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">Messages</a>-->
+    <!--                <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">Settings</a>-->
+                </div>
+            </div>
+            <div class="col-8 tabs" id="tabs">
+                <div class="tab-content" id="nav-tabContent">
+    <!--                <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">...</div>-->
+    <!--                <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...</div>-->
+    <!--                <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">...</div>-->
+    <!--                <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>-->
+                </div>
+                <img class="pictureBox p-2" id="pictureBox" src="">
             </div>
         </div>
-        <div class="col-8 tabs" id="tabs">
-            <div class="tab-content" id="nav-tabContent">
-<!--                <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">...</div>-->
-<!--                <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">...</div>-->
-<!--                <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">...</div>-->
-<!--                <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">...</div>-->
-            </div>
-            <img class="pictureBox p-2" id="pictureBox" src="">
-        </div>
     </div>
-    </div>
-<script src="../js/load_images.js"></script>
+    <script src="../js/load_images.js"></script>
 </body>
 </html>
