Some issues in GUI were improved. README updated after hackathon

--- a/html/about.html
+++ b/html/about.html
@@ -4,8 +4,8 @@
 <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-<div class ="app">
-    <a href = "index.html" title = "Назад"><img src="../photo/back1.png" width = 30 height = 30 style="margin-left: 1%  ; margin-top: 1%"></a>
+<div class="app">
+    <a href="index.html" title = "Назад"><img src="../photo/back1.png" width=30 height=30 style="margin-left: 1%  ; margin-top: 1%" alt="back"></a>
     <h2>О проекте</h2>
     <div class="about_text">
         <p>Приложение автоматически идентифицирует белых медведей на массиве
