--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <script src="../js/renderer.js"></script>
-<div class="app ">
+<div class="app" style="text-align: center">
     <h1>Детекция белых медведей</h1>
 </div>
 <a class="btn" href="load_file.html">Начать</a>
